--- a/dev/client/css/main.css
+++ b/dev/client/css/main.css
@@ -1,7 +1,17 @@
+@import url('reset.css');
+
 body{
-    background-color: rgb(160, 193, 199);
-    padding: 0;
-    margin: 0;
     width: 100vw;
     height: 100vh;
+    background-image: url(../img/background.jpg);
+    background-position: center;
+    background-size: cover;
+    font-family: 'Spectral', serif;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+@import url('login.css');
+@import url('chat.css');
