--- a/dev/client/css/messages.css
+++ b/dev/client/css/messages.css
@@ -25,5 +25,41 @@
 }
 
 .myMessage{
-    
+    border-radius: 15px;
+    width: 700px;
+    margin-top: 5px;
+    margin-left: 490px;
+    background-color: rgba(89,166,234,0.5);
+}
+
+.messageTitle{
+    width: 400px;
+    height: 20px;
+    font-size: 15px;
+    margin-left: 15px;
+    margin-bottom: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+
+.messageTitle div{
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.messageText{
+    width: 680px;
+    margin-left: 10px;
+    font-size: 22px;
+    line-height: 25px;
+    font-weight: 700;
+}
+
+.othersMessage{
+    border-radius: 15px;
+    width: 700px;
+    margin-top: 5px;
+    margin-left: 10px;
+    background-color: rgba(95,212,95,0.5);
 }
