--- a/dev/client/css/chat.css
+++ b/dev/client/css/chat.css
@@ -14,7 +14,7 @@
     height: 750px;
     float: left;
     margin-top: 30px;  
-    margin-left: 16px;
+    margin-left: 16px; 
 }
 .chat{
     width: 1200px;
@@ -56,3 +56,123 @@
     background-color: rgba(4, 147, 240, 1);
     transform: scale(1.1);
 }
+
+
+@media all and (max-width: 1500px){
+    .czatContainer{
+        width: 1000px;
+        height: 700px;
+    }
+    .czatContent{
+            width: 800px;
+            height: 450px;
+            margin-left: 10px;
+    }
+    .chat{
+        width: 800px;
+    }
+    #czatTextArea{
+        width: 600px;
+        height: 100px;
+        margin-left: 200px;
+        margin-top: 10px;
+    }
+    .chatSendButton{
+        margin-left: 425px;
+        margin-top: 10px;
+    }
+}
+
+@media all and (max-width: 1100px){
+    .czatContainer{
+        width: 780px;
+        height: 550px;
+    }
+    .czatContent{
+         width: 610px;
+         height: 370px;
+         margin-left: 5px;
+    }
+    .chat{
+        width: 610px;
+        height: 370px;
+    }
+    #czatTextArea{
+        width: 350px;
+        height: 80px;
+        font-size: 20px;
+        margin-left: 215px;
+        margin-top: 10px;
+    }
+    .chatSendButton{
+        margin-left: 315px;
+        margin-top: 10px;
+    }
+}
+
+@media all and (max-width: 800px){
+    .czatContainer{
+        width: 490px;
+        height: 350px;
+    }
+    .czatContent{
+         width: 470px;
+         height: 250px;
+         margin-left: 10px;
+        margin-top: 2px;
+        }
+    .chat{
+        width: 470px;
+        height: 250px;
+    }
+    #czatTextArea{
+        width: 350px;
+        height: 80px;
+        font-size: 18px;
+        margin-left: 10px;
+        margin-top: 10px;
+
+        float: left;
+    }
+    .chatSendButton{
+        width: 100px;
+        height: 30px;
+        margin: 0;
+        margin-top: 30px;
+        margin-left: 370px;
+    }
+}
+
+@media all and (max-width: 500px){
+    .czatContainer{
+        width: 300px;
+        height: 400px;
+    }
+    .czatContent{
+         width: 290px;
+         height: 300px;
+         margin-left: 4px;
+        margin-top: 2px;
+        }
+    .chat{
+        width: 290px;
+        height: 300px;
+    }
+    #czatTextArea{
+        width: 280px;
+        height: 50px;
+        font-size: 16px;
+        margin-left: 5px;
+        margin-top: 5px;
+    }
+    .chatSendButton{
+        width: 100px;
+        height: 30px;
+        margin-left: 100px;
+        margin-top: 60px;
+        font-size: 16px;
+        background-color: rgba(4, 147, 240, 0.8);
+    }
+    
+}
+
