--- a/dev/client/css/chatUser.css
+++ b/dev/client/css/chatUser.css
@@ -9,6 +9,7 @@
     float: left;
     margin-top: 30px; 
     margin-left: 16px;
+    transition: all 0.3s ease-in-out;
 }
 .chatUserList{
     width: 240px;
@@ -55,7 +56,6 @@
             width: 150px;
             margin-left: 8px;
             height: 370px;
-            opacity: 0.5;
         }
         .chatUserContainer:hover{
             opacity: 1;
@@ -80,6 +80,7 @@
             width: 210px;
             display: flex;
             flex-direction: row;
+            opacity: 0.5;
         }
         .chatUserList{
             width: 145px;
