--- a/dev/client/css/chat.css
+++ b/dev/client/css/chat.css
@@ -7,6 +7,7 @@
     background-color: rgba(255, 255, 255, 0.15);
     font-size: 22px;
     transition: all 0.5s linear;
+    display: none;
 }
 
 .czatContent{
