--- a/dev/client/css/login.css
+++ b/dev/client/css/login.css
@@ -2,15 +2,15 @@
     width: 600px;
     height: 300px;
     background-color:rgba(255, 255, 255,0.2);
-    /* display: flex;
+    display: flex;
     align-items: center;
-    justify-content: center; */
+    justify-content: center;
     flex-direction: column;
     border-radius: 15px;
     border: 3px solid #fff;
     overflow: hidden;
     transition: all 0.5s ease-out;
-    display: none;
+    /* display: none; */
 }
 
 .errorInfo{
