--- a/dev/client/css/chat.css
+++ b/dev/client/css/chat.css
@@ -8,6 +8,7 @@
     font-size: 22px;
     transition: all 0.5s linear;
     display: none;
+    transition: all 0.5s ease-in-out;
 }
 
 .czatContent{
