--- a/dev/client/css/chat.css
+++ b/dev/client/css/chat.css
@@ -26,6 +26,7 @@
     overflow: auto;
     box-shadow: 0px 0px 5px 1px #ffffff;
     border-radius: 15px;
+    overflow-x: hidden;
 }
 
 #czatTextArea{
