--- a/dev/client/css/chatUser.css
+++ b/dev/client/css/chatUser.css
@@ -10,6 +10,7 @@
     margin-top: 30px; 
     margin-left: 16px;
     transition: all 0.3s ease-in-out;
+    overflow-x: hidden;
 }
 .chatUserList{
     width: 240px;
